--- a/style.css
+++ b/style.css
@@ -633,60 +633,6 @@ a:hover, a:active {
 	outline: 0;
 }
 
-/*--------------------------------------------------------------
-## Menus
---------------------------------------------------------------*/
-.main-navigation {
-	clear: both;
-	display: block;
-	float: left;
-	width: 100%;
-}
-
-.main-navigation ul {
-	display: none;
-	list-style: none;
-	margin: 0;
-	padding-left: 0;
-}
-
-.main-navigation ul ul {
-	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-	float: left;
-	position: absolute;
-	top: 100%;
-	left: -999em;
-	z-index: 99999;
-}
-
-.main-navigation ul ul ul {
-	left: -999em;
-	top: 0;
-}
-
-.main-navigation ul ul li:hover > ul,
-.main-navigation ul ul li.focus > ul {
-	left: 100%;
-}
-
-.main-navigation ul ul a {
-	width: 200px;
-}
-
-.main-navigation ul li:hover > ul,
-.main-navigation ul li.focus > ul {
-	left: auto;
-}
-
-.main-navigation li {
-	float: left;
-	position: relative;
-}
-
-.main-navigation a {
-	display: block;
-	text-decoration: none;
-}
 
 /* Small menu. */
 .menu-toggle,
@@ -990,6 +936,7 @@ body{
 	font-family: 'Montserrat', sans-serif;
 	color: #444;
 	background: #fff;
+	font-smooth:antialiased;
 }
 .group:after {
     visibility: hidden;
@@ -1037,6 +984,60 @@ body{
 .wrapper{
 	max-width: 1920px;
 	margin: 0 auto;
+}
+
+
+header, main, footer{
+	margin: 0;
+	padding: 0;
+	width: 100%;
+}
+
+.site-header{
+	/* background: #2b2b2b; */
+	position: fixed;
+	z-index: 10000;
+	opacity: .95;
+	margin: 0;
+	padding:0;
+	text-shadow: 0 0 3px #262627;
+}
+.header-container{
+	/* padding-top: 20px; */
+}
+.logo{
+	float: left;
+	padding: 15px 0;
+}
+	.logo a{
+		color: #fff;
+		font-weight: 600;
+		font-size: 1.4em;
+		text-decoration: none;
+		display: block;
+	}
+nav{
+	float: right;
+}
+.menu-primary-menu-container ul{
+	list-style-type: none;
+	margin: 0;
+	padding:0;
+}
+.menu-primary-menu-container ul li{
+	display: inline-block;
+	padding: 10px;
+}
+.menu-primary-menu-container ul li a{
+	display: block;
+	color:#fff;
+	text-decoration: none;
+	font-size: .8em;
+	font-weight: 300;
+	padding: 10px;
+}
+.menu-primary-menu-container ul li a:hover{
+	border-bottom: 1px solid #43e8e4;
 }
 
 
@@ -1149,12 +1150,14 @@ body{
 	.widget_nav_menu ul li a:hover{
 		color: #434541;
 		margin: 0 auto;
+		background: #43e8e4;
 	}
 	.widget_media_image{
 		float: none;
+		margin: 0 auto;
 	}
 	.social-container i{
 		font-size: 1.5em;
-		padding: 0 104px;
+		padding: 0 10px;
 	}
 }
