--- a/style.css
+++ b/style.css
@@ -1016,6 +1016,8 @@ header, main, footer{
 		text-decoration: none;
 		display: block;
 	}
+
+/* NAVIGATION */
 nav{
 	float: right;
 }
@@ -1041,6 +1043,8 @@ nav{
 }
 
 
+
+/* FOOTER */
 .footer-menu-container{
 	border-top: 1px solid #f4f4f4;
 	padding-bottom: 20px;
