--- a/style.css
+++ b/style.css
@@ -1042,13 +1042,10 @@ nav{
 	border-bottom: 1px solid #43e8e4;
 }
 
-.content-area, .site-content{
-	padding: 0;
-	margin: 0;
+
+.instagram-container{
+	padding: 20px 0;
 }
-
-
-
 
 
 /* FOOTER */
