--- a/style.css
+++ b/style.css
@@ -994,7 +994,7 @@ header, main, footer{
 }
 
 .site-header{
-	/* background: #2b2b2b; */
+	background: #2b2b2b;
 	position: fixed;
 	z-index: 10000;
 	opacity: .95;
