--- a/css/hamburgers.css
+++ b/css/hamburgers.css
@@ -34,7 +34,7 @@
     .hamburger.is-active .hamburger-inner,
     .hamburger.is-active .hamburger-inner::before,
     .hamburger.is-active .hamburger-inner::after {
-      background-color: #000; }
+      background-color: #fff; }
 
   .hamburger-box {
     width: 40px;
@@ -49,7 +49,7 @@
     .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
       width: 35px;
       height: 2px;
-      background-color: #404040;
+      background-color: #fff;
       border-radius: 10px;
       position: absolute;
       transition-property: transform;
