--- a/style.css
+++ b/style.css
@@ -1123,7 +1123,9 @@ nav{
 .menu-primary-menu-container ul li a:hover{
 	border-bottom: 1px solid #43e8e4;
 }
-
+.shopping-bag, .site-header-burger{
+	display: none;
+}
 
 
 
@@ -1237,10 +1239,56 @@ nav{
 }
 @media only screen and (max-width: 894px){
 	/* Sem pojde definicia */
+	
 }
 @media only screen and (max-width: 767px){
 	.wrapp{
 		width: 90%;
+	}
+	/* Menu definition */
+	.logo-container{
+		float: none;
+		width: 100%;
+		text-align: center;
+		margin: 0 auto;
+		position: relative;
+	}
+	.shopping-bag, .site-header-burger{
+		float: left;
+		position: absolute;
+		right: 0;
+		padding-top: 5px;
+		display: block;
+	}
+	nav{
+		float: none;
+		width: 100%;
+		padding-top: 65px;
+		margin: 0;
+	}
+	.menu-primary-menu-container ul{
+		list-style-type: none;
+		margin: 0;
+		padding: 0;
+		width: 100%;
+	}
+	.menu-primary-menu-container ul li{
+		display: block;
+		margin: 0;
+		padding: 0;
+	}
+	.menu-primary-menu-container ul li:last-child{
+		padding-bottom: 40px; 
+	}
+	.menu-primary-menu-container ul li a{
+		color:#fff;
+		font-size: .9em;
+		padding: 15px 10px;
+		font-weight: 500;
+	}
+	.menu-primary-menu-container ul li a:hover{
+		background:  #43e8e4;
+		border: none;
 	}
 	/* Footer definition */
 	.widget_nav_menu{
