--- a/css/hamburgers.css
+++ b/css/hamburgers.css
@@ -28,19 +28,23 @@
     margin: 0;
     overflow: visible; }
     .hamburger:hover {
-      opacity: 0.7; }
+      /* opacity: 0.7; */
+    }
     .hamburger.is-active:hover {
-      opacity: 0.7; }
+      /* opacity: 0.7; */
+    }
     .hamburger.is-active .hamburger-inner,
     .hamburger.is-active .hamburger-inner::before,
     .hamburger.is-active .hamburger-inner::after {
       background-color: #fff; }
 
   .hamburger-box {
-    width: 40px;
+    width: 50px;
     height: 24px;
     display: inline-block;
-    position: relative; }
+    position: relative;
+    float: right;
+  }
 
   .hamburger-inner {
     display: block;
@@ -50,6 +54,7 @@
       width: 35px;
       height: 2px;
       background-color: #fff;
+      text-shadow: 0 0 3px #262627;
       border-radius: 10px;
       position: absolute;
       transition-property: transform;
