--- a/style.css
+++ b/style.css
@@ -1045,6 +1045,7 @@ body{
 }
 
 
+
 header, main, footer{
 	margin: 0;
 	padding: 0;
@@ -1106,8 +1107,13 @@ nav{
 }
 
 
+/* CONTENT */
 .site-content{
 	padding-top: 60px;
+}
+
+.sc1title{
+	background: red;
 }
 
 
@@ -1243,7 +1249,7 @@ nav{
 		position: absolute;
 		top: 0;
 		right: 0;
-		padding-top: 5px;
+		padding-top: 8px;
 		display: block;
 
 	}
