--- a/css/slider.css
+++ b/css/slider.css
@@ -1,6 +1,6 @@
 #jquery-script-menu {
-  position: fixed;
-  height: 90px;
+  /* position: fixed; */
+  /* height: 90px; */
   width: 100%;
   top: 0;
   left: 0;
@@ -16,10 +16,6 @@
   box-sizing:content-box;
   }
   
-  .jquery-script-center {
-  width: 960px;
-  margin: 0 auto;
-  }
   .jquery-script-center ul {
   width: 212px;
   float:left;
@@ -31,30 +27,30 @@
   .jquery-script-center a {
     text-decoration:none;
   }
-  .jquery-script-ads {
-  width: 728px;
-  height: 90px;
-  float:right;
-  }
+ 
   .jquery-script-clear {
   clear:both;
   height:0;
   }
 .g_slide {
   position: relative;
-  /* max-width: 1920px; */
-  height: 800px;
+  height: 700px;
+  /* width: 100%; */
+  /* height: 80vh; */
   overflow: hidden;
+
+	-webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 93%);
+	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 93%);
+	background: #43e8e4;
 }
-.g_slide img{
-  height: 100%;
+.item img{
+  max-width: 1920px;
+  height: 100vh;
+  background-position: right center;
   background-repeat: no-repeat;
-  background-position: center;
   background-size: cover;
-  position: relative;
-  margin: 0;
-  padding: 0;
 }
+
 .g_slide .item {
   display: none;
   position: absolute;
@@ -134,9 +130,10 @@
 
 .switch_main { 
   position: relative;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif;  
   /* top: 50%; */
 }
+
 
 .scroll .item {
   float: left;
@@ -185,8 +182,9 @@
   display: none;
   position: absolute;
   z-index: 11;
-  padding-top: 300px;
-  /* left: 15%; */
+  padding-top: 400px;
+  padding-left: 50px;
+  float: right;
 }
 .slider-caption h1{
   color: #fff;
