--- a/style.css
+++ b/style.css
@@ -1108,10 +1108,20 @@ nav{
 
 
 /* CONTENT */
+.dcs-title{
+	padding-top: 90px;
+}
 .site-content{
 	/* padding-top: 60px; */
 }
-
+.sc1{
+	width: 100%;
+	height: auto;
+	padding: 50px 0;
+	background: #f4f4f4;
+	-webkit-clip-path: polygon(0 6%, 100% 0, 100% 100%, 0 96%);
+	clip-path: polygon(0 6%, 100% 0, 100% 100%, 0 96%);
+}
 .sc1title{
 	background: red;
 }
